--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <link href="/docs/assets/css/style.css" rel="stylesheet" type="text/css" id="theme-opt">
   <link href="/docs/assets/css/colors/default.css" rel="stylesheet" id="color-opt">
 <style>html{-webkit-tap-highlight-color:transparent}body{color:#000000d9;line-height:1.5715;font-size:14px}body{color:#000000d9}body,html{width:100%;height:100%}*,:after,:before{box-sizing:border-box}html{font-family:sans-serif;line-height:1.15;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;-ms-overflow-style:scrollbar;--antd-wave-shadow-color:#1890ff;--scroll-bar:0}body{font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,"Apple Color Emoji","Segoe UI Emoji",Segoe UI Symbol,"Noto Color Emoji"}@-ms-viewport{width:device-width}body{margin:0;font-variant:tabular-nums;background-color:#fff;font-feature-settings:"tnum"}
-</style><link rel="stylesheet" href="styles-DHN6MJCD.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-DHN6MJCD.css"></noscript></head>
+</style><link rel="stylesheet" href="./styles-DHN6MJCD.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="./styles-DHN6MJCD.css"></noscript></head>
 
 <body data-bs-spy="scroll" data-bs-target="#navbar-navlist" data-bs-offset="20">
       <app-root></app-root>
@@ -59,6 +59,6 @@
   <!-- Main Js -->
   <script src="/docs/assets/js/app.js"></script>
 
-<script src="polyfills-LZBJRJJE.js" type="module"></script><script src="main-GRADQWL3.js" type="module"></script></body>
+<script src="./polyfills-LZBJRJJE.js" type="module"></script><script src="./main-GRADQWL3.js" type="module"></script></body>
 
 </html>
