--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="google" content="notranslate">
   <meta http-equiv="Content-Language" content="en">
   <title>留白技术文档</title>
-  <base href="/docs">
+  <base href="./">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <meta charset="utf-8">
