--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="google" content="notranslate">
   <meta http-equiv="Content-Language" content="en">
   <title>留白技术文档</title>
-  <base href="./">
+  <base href="/docs">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <meta charset="utf-8">
@@ -59,6 +59,6 @@
   <!-- Main Js -->
   <script src="/docs/assets/js/app.js"></script>
 
-<script src="/docs/polyfills-LZBJRJJE.js" type="module"></script><script src="/docs/main-GRADQWL3.js" type="module"></script></body>
+<script src="/docs/polyfills-LZBJRJJE.js" type="module"></script><script src="/docs/main-3ITDLQJF.js" type="module"></script></body>
 
 </html>
