--- a/index.html
+++ b/index.html
@@ -11,54 +11,51 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- favicon -->
-  <!-- <link rel="shortcut icon"
-        href="/docs/assets/images/favicon.ico"> -->
   <!-- Bootstrap -->
-  <link href="/docs/assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+  <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
   <!-- MK Lightbox -->
-  <link href="/docs/assets/css/mklb.css" rel="stylesheet" type="text/css">
+  <link href="assets/css/mklb.css" rel="stylesheet" type="text/css">
   <!-- Icons -->
-  <link href="/docs/assets/css/materialdesignicons.min.css" rel="stylesheet" type="text/css">
+  <link href="assets/css/materialdesignicons.min.css" rel="stylesheet" type="text/css">
   <!-- Slider -->
-  <link href="/docs/assets/css/tiny-slider.css" rel="stylesheet">
+  <link href="assets/css/tiny-slider.css" rel="stylesheet">
   <!-- Main css File -->
-  <link href="/docs/assets/css/style.css" rel="stylesheet" type="text/css" id="theme-opt">
-  <link href="/docs/assets/css/colors/default.css" rel="stylesheet" id="color-opt">
+  <link href="assets/css/style.css" rel="stylesheet" type="text/css" id="theme-opt">
+  <link href="assets/css/colors/default.css" rel="stylesheet" id="color-opt">
 <style>html{-webkit-tap-highlight-color:transparent}body{color:#000000d9;line-height:1.5715;font-size:14px}body{color:#000000d9}body,html{width:100%;height:100%}*,:after,:before{box-sizing:border-box}html{font-family:sans-serif;line-height:1.15;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;-ms-overflow-style:scrollbar;--antd-wave-shadow-color:#1890ff;--scroll-bar:0}body{font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,"Apple Color Emoji","Segoe UI Emoji",Segoe UI Symbol,"Noto Color Emoji"}@-ms-viewport{width:device-width}body{margin:0;font-variant:tabular-nums;background-color:#fff;font-feature-settings:"tnum"}
 </style><link rel="stylesheet" href="styles-DHN6MJCD.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-DHN6MJCD.css"></noscript></head>
 
 <body data-bs-spy="scroll" data-bs-target="#navbar-navlist" data-bs-offset="20">
       <app-root></app-root>
   <!-- Javascript -->
-  <script src="/docs/assets/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/js/bootstrap.bundle.min.js"></script>
 
   <!-- Slider -->
-  <script src="/docs/assets/js/tiny-slider.js "></script>
-  <script src="/docs/assets/js/tiny-slider-init.js "></script>
+  <script src="assets/js/tiny-slider.js "></script>
+  <script src="assets/js/tiny-slider-init.js "></script>
 
   <!-- MK Lightbox -->
-  <script src="/docs/assets/js/mklb.js"></script>
+  <script src="assets/js/mklb.js"></script>
 
   <!-- Contact -->
-  <script src="/docs/assets/js/contact.js"></script>
+  <script src="assets/js/contact.js"></script>
 
   <!-- Counter init -->
-  <script src="/docs/assets/js/counter.init.js"></script>
+  <script src="assets/js/counter.init.js"></script>
 
   <!-- Feather icon -->
-  <script src="/docs/assets/js/feather.min.js"></script>
+  <script src="assets/js/feather.min.js"></script>
 
   <!-- Typed -->
-  <script src="/docs/assets/js/typed.js"></script>
-  <script src="/docs/assets/js/typed.init.js"></script>
+  <script src="assets/js/typed.js"></script>
+  <script src="assets/js/typed.init.js"></script>
 
   <!-- Switcher -->
-  <script src="/docs/assets/js/switcher.js"></script>
+  <script src="assets/js/switcher.js"></script>
 
   <!-- Main Js -->
-  <script src="/docs/assets/js/app.js"></script>
+  <script src="assets/js/app.js"></script>
 
-<script src="polyfills-LZBJRJJE.js" type="module"></script><script src="main-RUUWLY6K.js" type="module"></script></body>
+<script src="polyfills-LZBJRJJE.js" type="module"></script><script src="main-UFOODRUK.js" type="module"></script></body>
 
 </html>
