--- a/index.html
+++ b/index.html
@@ -56,6 +56,6 @@
   <!-- Main Js -->
   <script src="assets/js/app.js"></script>
 
-<script src="polyfills-LZBJRJJE.js" type="module"></script><script src="main-UFOODRUK.js" type="module"></script></body>
+<script src="polyfills-LZBJRJJE.js" type="module"></script><script src="main-ZV4GRU72.js" type="module"></script></body>
 
 </html>
